--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,12 @@
-<!doctype html>
-<html lang="en" >
+<!DOCTYPE html>
+<html lang="pl-PL" >
 <head>
   <meta charset="utf-8">
   <title>ECommerceFront</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root ></app-root>
-  <script src="../node_modules/jquery/dist/jquery.js"></script>  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-
 </body>
 </html>
